everyone loves metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" type="text/css" href="main.css" media="all">
 
+  <title>FOCUS_CONCENTRATE</title>
+  <meta property="og:title" content="FOCUS_CONCENTRATE" />
+  <meta property="og:locale" content="en_US" />
+  <meta name="description" content="keep calm." />
+  <meta property="og:description" content="keep calm." />
+  <link rel="canonical" href="https://www.gjtorikian.com/focus_concentrate/" />
+  <meta property="og:url" content="https://www.gjtorikian.com/focus_concentrate/" />
+  <meta property="og:site_name" content="FOCUS_CONCENTRATE" />
+  <meta property="og:image" content="https://www.gjtorikian.com/assets/images/card_banner.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@gjtorikian" />
+  <script type="application/ld+json">
+  {"@context":"http://schema.org","@type":"WebSite","name":"Garen J. Torikian","headline":"Garen J. Torikian","image":"https://www.gjtorikian.com/assets/images/card_banner.png","description":"keep calm.","sameAs":["https://twitter.com/gjtorikian","https://github.com/gjtorikian"],"url":"https://www.gjtorikian.com/focus_concentrate/"}
+  </script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/face-min.js"></script>
   <style>
