--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta property="og:url" content="https://www.gjtorikian.com/focus_concentrate/" />
   <meta property="og:site_name" content="FOCUS_CONCENTRATE" />
   <meta property="og:image" content="https://www.gjtorikian.com/assets/images/card_banner.png" />
+  <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@gjtorikian" />
   <script type="application/ld+json">
