--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>FOCUS_CONCENTRATE</title>
   <meta property="og:title" content="FOCUS_CONCENTRATE" />
   <meta property="og:locale" content="en_US" />
-  <meta name="description" content="keep calm." />
-  <meta property="og:description" content="keep calm." />
+  <meta name="description" content="Get close. Stay centered. Don't move." />
+  <meta property="og:description" content="Get close. Stay centered. Don't move." />
   <link rel="canonical" href="https://www.gjtorikian.com/focus_concentrate/" />
   <meta property="og:url" content="https://www.gjtorikian.com/focus_concentrate/" />
   <meta property="og:site_name" content="FOCUS_CONCENTRATE" />
@@ -19,7 +19,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@gjtorikian" />
   <script type="application/ld+json">
-  {"@context":"http://schema.org","@type":"WebSite","name":"Garen J. Torikian","headline":"Garen J. Torikian","image":"https://www.gjtorikian.com/assets/images/card_banner.png","description":"keep calm.","sameAs":["https://twitter.com/gjtorikian","https://github.com/gjtorikian"],"url":"https://www.gjtorikian.com/focus_concentrate/"}
+  {"@context":"http://schema.org","@type":"WebSite","name":"Garen J. Torikian","headline":"Garen J. Torikian","image":"https://www.gjtorikian.com/assets/images/card_banner.png","description":"Get close. Stay centered. Don't move.","sameAs":["https://twitter.com/gjtorikian","https://github.com/gjtorikian"],"url":"https://www.gjtorikian.com/focus_concentrate/"}
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js"></script>
@@ -45,7 +45,7 @@
       <span id="focus" class="red">FOCUS</span><span class="blink">_</span><span id="concentrate" class="red">CONCENTRATE</span>
     </h1>
     <h2 class="helvetica f5 f4-m f3-l fw2 black-50 mt0 lh-copy">
-      Lean in. Get close. Stay still when the text turns green.
+      Get close. Stay centered. Don't move.
     </h2>
   </header>
   <div class="dt-ns dt--fixed-ns">
