--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:site_name" content="FOCUS_CONCENTRATE" />
   <meta property="og:image" content="https://www.gjtorikian.com/assets/images/card_banner.png" />
   <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@gjtorikian" />
   <script type="application/ld+json">
   {"@context":"http://schema.org","@type":"WebSite","name":"Garen J. Torikian","headline":"Garen J. Torikian","image":"https://www.gjtorikian.com/assets/images/card_banner.png","description":"Get close. Stay centered. Don't move.","sameAs":["https://twitter.com/gjtorikian","https://github.com/gjtorikian"],"url":"https://www.gjtorikian.com/focus_concentrate/"}
