everyone loves favicons

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   {"@context":"http://schema.org","@type":"WebSite","name":"Garen J. Torikian","headline":"Garen J. Torikian","image":"https://www.gjtorikian.com/assets/images/card_banner.png","description":"Get close. Stay centered. Don't move.","sameAs":["https://twitter.com/gjtorikian","https://github.com/gjtorikian"],"url":"https://www.gjtorikian.com/focus_concentrate/"}
   </script>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.gjtorikian.com/assets/images/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://www.gjtorikian.com/assets/images/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.gjtorikian.com/assets/images/favicons/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/data/face-min.js"></script>
   <style>
