--- a/index.html
+++ b/index.html
@@ -227,5 +227,12 @@
       });
     };
   </script>
+
+  <footer class="pv4 ph3 ph5-m ph6-l mid-gray">
+    <div class="tc mt3">
+      <a href="https://github.com/gjtorikian/focus_concentrate" title="Source code" class="f6 dib ph2 link mid-gray dim">source code</a>
+    </div>
+  </footer>
+
 </body>
 </html>
